# Mowitz

./: AUTHORS  COPYING  ChangeLog  INSTALL  Makefile.am  README.md  acinclude.m4  configure.ac  mowitz-config.sh
Mowitz/: FontDataBase  IsoLatin1.enc  IsoLatin2.enc  Makefile.am  Mowitz.h  MwAnimator.c  MwAnimator.h  MwAnimatorP.h  MwAnimatorTypes.h  MwApplicationShell.c  MwApplicationShell.h  MwApplicationShellP.h  MwBase.c  MwBase.h  MwBaseComp.c  MwBaseComp.h  MwBaseCompP.h  MwBaseConst.c  MwBaseConst.h  MwBaseConstP.h  MwBaseME.c  MwBaseME.h  MwBaseMEP.h  MwBaseP.h  MwButton.c  MwButton.h  MwButtonP.h  MwCanvas.c  MwCanvas.h  MwCanvasP.h  MwCheck.c  MwCheck.h  MwCheckME.c  MwCheckME.h  MwCheckMEP.h  MwCheckP.h  MwCombo.c  MwCombo.h  MwComboP.h  MwDND.c  (+109 more)
Mowitz/cursor/: Makefile.am  app.xbm  app_mask.xbm  dir.xbm  dir_mask.xbm  file.xbm  file_mask.xbm  files.xbm  files_mask.xbm  grey.xbm  grey_mask.xbm  link.xbm  link_mask.xbm  text.xbm  text_mask.xbm
Mowitz/fonts/: Makefile.am  README  tnrl2___.afm  tnrl2b__.afm  tnrl2bi_.afm  tnrl2i__.afm
Mowitz/pixmaps/: Makefile.am  c2off.xpm  c2on.xpm  c_off.xpm  c_on.xpm  check_motif_off.xpm  check_motif_on.xpm  choff.xpm  chon.xpm  combo.xpm  croff.xpm  cron.xpm  ctab.xpm  doff.xpm  don.xpm  ltab.xpm  mc2off.xpm  mc2on.xpm  mchoff.xpm  mchon.xpm  mcoff.xpm  mcon.xpm  mcroff.xpm  mcron.xpm  mdoff.xpm  mdon.xpm  mroff.xpm  mron.xpm  radio_16_off.xpm  radio_16_on.xpm  radio_motif_off.xpm  radio_motif_on.xpm  roff.xpm  ron.xpm  rtab.xpm  spindown.xpm  spinup.xpm  tickbox_off.xpm  tickbox_on.xpm  trioff.xpm  (+1 more)
doc/: Filesel.html  ListTree.HISTORY  ListTree.html  ListTreeProg.html  Makefile.am  Slider.README  Slider.man
examples/: Directory.c  Directory.h  Makefile.am  TreeFSel.c  TreeFSel.h  TreeFSelP.h  allwidgets.c  listtree.c  listtree2.c  rulerdemo.c
