AC_INIT(README)
AM_INIT_AUTOMAKE(Mowitz, 0.3.1)

AC_PROG_AWK
AC_PROG_CC
AC_PROG_INSTALL
AC_PROG_LN_S
AC_ISC_POSIX

AC_PROG_LIBTOOL

AC_PATH_XTRA
AC_HEADER_DIRENT

AC_TYPE_SIZE_T
AC_HEADER_TIME
AC_STRUCT_TM

AC_CHECK_MOWITZ

AC_OUTPUT(Makefile Mowitz/Makefile Mowitz/cursor/Makefile \
	Mowitz/fonts/Makefile Mowitz/pixmaps/Makefile \
	examples/Makefile doc/Makefile)
