
fontsdir = $(pkgdatadir)/fonts
fonts_DATA = agd.afm agdo.afm agw.afm agwo.afm \
	bkd.afm bkdi.afm bkl.afm bkli.afm \
	cob.afm cobo.afm com.afm coo.afm \
	hv.afm hvb.afm hvbo.afm hvn.afm \
	hvnb.afm hvnbo.afm hvno.afm hvo.afm \
	ncb.afm ncbi.afm nci.afm ncr.afm \
	pob.afm pobi.afm poi.afm por.afm \
	sy.afm \
	tib.afm tibi.afm tii.afm tir.afm \
	uhvb8a.afm uhvbo8a.afm uhvr8a.afm uhvro8a.afm \
	utmb8a.afm utmbi8a.afm utmr8a.afm utmri8a.afm \
	zcmi.afm zd.afm \
	bchb.afm bchb.pfb bchbi.afm bchbi.pfb \
	bchr.afm bchr.pfb bchri.afm bchri.pfb \
	tnrl2___.afm tnrl2___.pfb tnrl2i__.afm tnrl2i__.pfb \
	tnrl2b__.afm tnrl2b__.pfb tnrl2bi_.afm tnrl2bi_.pfb

EXTRA_DIST = $(fonts_DATA) README

