
xpmdir = $(pkgdatadir)/pixmaps
xpm_DATA = combo.xpm spindown.xpm spinup.xpm trioff.xpm trion.xpm \
	check_motif_off.xpm check_motif_on.xpm \
	radio_motif_off.xpm radio_motif_on.xpm \
	tickbox_off.xpm tickbox_on.xpm \
	radio_16_off.xpm radio_16_on.xpm \
	ctab.xpm ltab.xpm rtab.xpm \
	doff.xpm don.xpm roff.xpm ron.xpm c_off.xpm c_on.xpm \
	choff.xpm chon.xpm c2on.xpm c2off.xpm cron.xpm croff.xpm \
	mdoff.xpm mdon.xpm mroff.xpm mron.xpm mcoff.xpm mcon.xpm \
	mchoff.xpm mchon.xpm mc2on.xpm mc2off.xpm mcron.xpm mcroff.xpm \
	handlebg.xpm unknown.xpm

EXTRA_DIST = $(xpm_DATA)
